--- a/static/css/scss/_idea_card.scss
+++ b/static/css/scss/_idea_card.scss
@@ -15,10 +15,12 @@
 
     &__fr1 {
         justify-self: end;
+        align-self: center;
     }
 
     &__fr3 {
         justify-self: end;
+        align-self: center; 
     }
 
     &__fr4 {
