--- a/static/css/scss/_base.scss
+++ b/static/css/scss/_base.scss
@@ -23,7 +23,13 @@ h1 {
 }
 
 
+.divider {
+    margin: 2rem 0 1rem 0;
 
+    &__bottom-margin {
+        margin: 2rem 0 1rem 0;
+    }
+}
 
 
 @media screen and (min-width: 1025px) {
