--- a/static/css/scss/_idea_details.scss
+++ b/static/css/scss/_idea_details.scss
@@ -49,7 +49,8 @@
 
             &--item {
                 justify-self: center;
-                background-color: #ee6e73;
+                background-color: $tagcolor;
+
             }
         }
     
