--- a/static/css/scss/styles.scss
+++ b/static/css/scss/styles.scss
@@ -1,8 +1,9 @@
-@use 'base';
-@use 'idea_card';
-@use 'idea_details';
-@use 'ideas_overview';
-@use 'tags';
-@use 'search_sort';
-@use 'nav';
-@use 'ideas';
+@import 'colors';
+@import 'base';
+@import 'idea_card';
+@import 'idea_details';
+@import 'ideas_overview';
+@import 'tags';
+@import 'search_sort';
+@import 'nav';
+@import 'ideas';
