Align votes and views better on back side of card.

--- a/static/css/override.css
+++ b/static/css/override.css
@@ -72,6 +72,11 @@ h1 {
 }
 .card-reveal-grid__row3 {
   padding: 1rem 0;
+  display: grid;
+  grid-template-columns: 10% repeat(4, 1fr) 10%;
+}
+.card-reveal-grid__row3--item {
+  grid-column: 3/5;
 }
 .card-reveal-grid__row4 {
   justify-self: center;
