--- a/templates/components/idea_card.html
+++ b/templates/components/idea_card.html
@@ -38,24 +38,26 @@
         <div class="card-reveal-grid">
             <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
             <h5 class="card-content-title card-reveal-grid__row2">{{idea.idea_title}}</h5>
-            <div class="card-grid card-reveal-grid__row3">
-                <div class="card-grid__fr1">
-                    <i class="material-icons">thumb_up</i>
-                </div>
-                <div class="card-grid__fr2">
-                    <p>{{idea.total_votes}}</p>
-                </div>
-                <div class="card-grid__fr3">
-                    <i class="material-icons">visibility</i>
-                </div>
-                <div class="card-grid__fr4">
-                    <p>{{idea.views}}</p>
-                </div>
-                <div class="card-grid__row2--left">
-                    votes
-                </div>
-                <div class="card-grid__row2--right">
-                    views
+            <div class="card-reveal-grid__row3">
+                <div class="card-grid card-reveal-grid__row3--item">
+                    <div class="card-grid__fr1">
+                        <i class="material-icons">thumb_up</i>
+                    </div>
+                    <div class="card-grid__fr2">
+                        <p>{{idea.total_votes}}</p>
+                    </div>
+                    <div class="card-grid__fr3">
+                        <i class="material-icons">visibility</i>
+                    </div>
+                    <div class="card-grid__fr4">
+                        <p>{{idea.views}}</p>
+                    </div>
+                    <div class="card-grid__row2--left">
+                        votes
+                    </div>
+                    <div class="card-grid__row2--right">
+                        views
+                    </div>
                 </div>
             </div>
             <h6 class="card-reveal-grid__row4">Summary:</h6>
