--- a/static/css/override.css
+++ b/static/css/override.css
@@ -37,28 +37,35 @@ h1 {
   text-align: center;
 }
 
-.card-grid {
+.grid-wrapper {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 25% repeat(4, 1fr) 25%;
+}
+
+.card-grid-front {
+  grid-column: 2/6;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
   column-gap: 0.6rem;
+  font-size: 1.5rem;
 }
-.card-grid__fr1 {
+.card-grid-front__fr1 {
   justify-self: end;
   align-self: center;
 }
-.card-grid__fr3 {
+.card-grid-front__fr3 {
   justify-self: end;
   align-self: center;
 }
-.card-grid__fr4 {
+.card-grid-front__fr4 {
   justify-self: start;
 }
-.card-grid__row2--left {
+.card-grid-front__row2--left {
   grid-column: 1/3;
   justify-self: center;
   font-size: 1rem;
 }
-.card-grid__row2--right {
+.card-grid-front__row2--right {
   grid-column: 3/5;
   justify-self: center;
   font-size: 1rem;
@@ -71,43 +78,42 @@ h1 {
   justify-self: end;
 }
 .card-reveal-grid__row3 {
-  padding: 1rem 0;
-  display: grid;
-  grid-template-columns: 10% repeat(4, 1fr) 10%;
-}
-.card-reveal-grid__row3--item {
-  grid-column: 3/5;
-}
-.card-reveal-grid__row4 {
   justify-self: center;
+}
+.card-reveal-grid__row5 {
+  justify-self: center;
+  padding-bottom: 1rem;
 }
 .card-reveal-grid__row6 {
   justify-self: center;
 }
-.card-reveal-grid__row7 {
-  justify-self: center;
-}
-.card-reveal-grid__row7--item {
+.card-reveal-grid__row6--item {
   background-color: #26a69a;
   color: white;
   font-size: 1rem;
   padding: 0.5rem 1rem;
 }
-.card-reveal-grid__row8 {
+.card-reveal-grid__row7 {
   text-align: center;
+  padding-bottom: 1rem;
 }
-.card-reveal-grid__row9 {
+.card-reveal-grid__row8 {
   text-align: center;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   column-gap: 1rem;
 }
-.card-reveal-grid__row9--tag {
+.card-reveal-grid__row8--tag {
   display: inline-block;
   height: 2rem;
   line-height: 2rem;
   background-color: #ee6e73;
   color: white;
+}
+.card-reveal-grid__row9 {
+  padding-top: 2rem;
+  font-size: 1rem;
+  justify-self: center;
 }
 
 .idea-details h1 {
