--- a/static/css/override.css
+++ b/static/css/override.css
@@ -221,7 +221,8 @@ h1 {
   display: grid;
   grid-template-columns: 1fr 1fr;
   justify-items: center;
-  line-height: 0.5rem;
+  line-height: 0.3rem;
+  padding-bottom: 2rem;
 }
 
 .image-container__detail {
