--- a/static/css/scss/_idea_details.scss
+++ b/static/css/scss/_idea_details.scss
@@ -120,7 +120,6 @@
                 box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
             }
         }
-    
     }
     
 
@@ -128,7 +127,8 @@
         display: grid;
         grid-template-columns: 1fr 1fr;
         justify-items: center;
-        line-height: 0.5rem;
+        line-height: 0.3rem;
+        padding-bottom: 2rem;
     }
 }
 
