Finish mobile styling registration page.

--- a/static/css/scss/styles.scss
+++ b/static/css/scss/styles.scss
@@ -1,3 +1,4 @@
+@use 'register';
 @import 'colors';
 @import 'base';
 @import 'idea_card';
@@ -7,3 +8,4 @@
 @import 'search_sort';
 @import 'nav';
 @import 'ideas';
+
