--- a/templates/pages/users/register.html
+++ b/templates/pages/users/register.html
@@ -1,4 +1,11 @@
 {% extends "layouts/base.html" %} {% block content %}
+
+<div class="hero">
+  {# 
+    {% include 'components/idea_carousel.html' %} 
+    #}
+</div>
+
 <div class="content-section">
   <form method="POST" action="">
     {{ form.hidden_tag() }}
@@ -55,11 +62,11 @@
       </div>
     </fieldset>
     <div class="form-group">
-      {{ form.submit(class="btn btn-outline-info") }}
+      {{ form.submit(class="btn btn-outline-info register") }}
     </div>
   </form>
 </div>
-<div class="border-top pt-3">
+<div class="border-top pt-3 center">
   <small class="text-muted">
     Already Have An Account?
     <a class="ml-2" href="{{ url_for('login') }}">Sign In</a>
