--- a/static/css/override.css
+++ b/static/css/override.css
@@ -1,3 +1,16 @@
+.content-section {
+  margin-top: 3rem;
+}
+
+.register {
+  margin: 2rem auto 1rem auto;
+  display: block;
+}
+
+.center {
+  text-align: center;
+}
+
 h1 {
   text-align: center;
   margin: 1.5rem 0 1rem 0;
