Change css class for registration. Finish login page mobile.

--- a/static/css/override.css
+++ b/static/css/override.css
@@ -1,8 +1,7 @@
 .content-section {
   margin-top: 3rem;
 }
-
-.register {
+.content-section__btn {
   margin: 2rem auto 1rem auto;
   display: block;
 }
