--- a/templates/pages/users/login.html
+++ b/templates/pages/users/login.html
@@ -28,20 +28,24 @@
         {% else %} {{ form.password(class="form-control form-control-lg") }} {%
         endif %}
       </div>
-      <div class="form-check">
+      <!-- Nice to have
+        
+         <div class="form-check">
         {{ form.remember(class="form-check-input") }} {{
         form.remember.label(class="form-check-label") }}
-      </div>
+      </div> -->
     </fieldset>
     <div class="form-group">
-      {{ form.submit(class="btn btn-outline-info") }}
+      {{ form.submit(class="btn btn-outline-info content-section__btn") }}
     </div>
-    <small class="text-muted ml-2">
+    <!-- Nice to have
+      
+      <small class="text-muted ml-2">
       <a href="#">Forgot Password?</a>
-    </small>
+    </small> -->
   </form>
 </div>
-<div class="border-top pt-3">
+<div class="border-top pt-3 center">
   <small class="text-muted">
     Need An Account?
     <a class="ml-2" href="{{ url_for('register') }}">Sign Up Here</a>
