--- a/templates/pages/users/register.html
+++ b/templates/pages/users/register.html
@@ -62,7 +62,7 @@
       </div>
     </fieldset>
     <div class="form-group">
-      {{ form.submit(class="btn btn-outline-info register") }}
+      {{ form.submit(class="btn btn-outline-info content-section__btn") }}
     </div>
   </form>
 </div>
