--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -16,6 +16,8 @@
   {% else %}
   <title>Rate it! - Problems and Solutions</title>
   {% endif %}
+  {% block head %}
+  {% endblock %}
 </head>
 
 <body>
