Finish mobile styling account required page.

--- a/static/css/scss/_base.scss
+++ b/static/css/scss/_base.scss
@@ -38,3 +38,20 @@ h1 {
         grid-template-columns: 1fr 1fr;
     }
 }
+
+.btn-centered {
+    display: block;
+    margin: 0 auto;
+}
+
+.set-width__200px {
+    width: 200px;
+}
+
+.margin-top {
+    margin-top: 2rem;
+}
+
+.margin-bottom {
+    margin-bottom: 2rem;
+}
