Change logo and mobile menu. Use own style instead of Materialize.

--- a/static/css/override.css
+++ b/static/css/override.css
@@ -15,6 +15,10 @@ h1 {
   margin: 1.5rem 0 1rem 0;
 }
 
+header {
+  margin-bottom: 5rem;
+}
+
 .wrapper {
   width: 800px;
   margin: 0 auto;
@@ -298,30 +302,125 @@ h1 {
 
 nav {
   box-shadow: none;
+  height: auto;
+  background-color: #e0f0fa;
 }
-nav .nav-wrapper {
-  display: grid;
-  grid-template-columns: 33% 33% 33%;
-  align-items: center;
+
+.primary-nav {
+  padding-top: 1rem;
 }
-nav .nav-wrapper .brand-logo-img {
-  height: 35px;
+.primary-nav ul {
+  list-style: none;
+  text-align: center;
+  padding: 0;
 }
-nav .nav-wrapper__left {
-  grid-column: 1;
-  justify-self: start;
-  align-self: center;
-  left: 15%;
+.primary-nav ul li {
+  margin-bottom: 1em;
+  margin-left: 1em;
 }
-nav .nav-wrapper__middle {
-  grid-column: 2;
-  justify-self: center;
-  align-self: center;
+.primary-nav ul a {
+  text-decoration: none;
+  font-size: 1.2rem;
+  text-transform: uppercase;
 }
-nav .nav-wrapper__right {
-  grid-column: 3;
-  justify-self: end;
-  align-self: center;
+
+.site-nav {
+  top: 0;
+  border-top: 2px solid #e84d74;
+  border-bottom: 1px solid #e5e5e5;
+  position: fixed;
+  background-color: #fff;
+  width: 100%;
+  z-index: 2;
+}
+.site-nav__menu-icon {
+  width: 20px;
+  height: 19px;
+  position: absolute;
+  top: 25px;
+  right: 20px;
+  z-index: 3;
+}
+.site-nav__menu-icon::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 20px;
+  height: 3px;
+  background-color: #e84d74;
+  transform-origin: 0 0;
+  transition: transform 0.3s ease-out;
+}
+.site-nav__menu-icon__middle {
+  position: absolute;
+  top: 8px;
+  left: 0;
+  width: 20px;
+  height: 3px;
+  background-color: #e84d74;
+  transition: opacity 0.3s ease-out;
+}
+.site-nav__menu-icon::after {
+  content: "";
+  position: absolute;
+  bottom: 0px;
+  left: 0;
+  width: 20px;
+  height: 3px;
+  background-color: #e84d74;
+  transform-origin: 0 100%;
+  transition: transform 0.3s ease-out;
+}
+.site-nav__menu-icon--close-x::before {
+  transform: rotate(45deg) scaleX(1.25);
+}
+.site-nav__menu-icon--close-x .site-nav__menu-icon__middle {
+  opacity: 0;
+}
+.site-nav__menu-icon--close-x::after {
+  transform: rotate(-45deg) scaleX(1.25) translateY(1px);
+}
+.site-nav__overlay {
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #e0f0fa;
+  overflow-y: hidden;
+  transition: 0.5s;
+  border-top: 2px solid #e84d74;
+  border-bottom: 10px solid #e84d74;
+  display: none;
+}
+.site-nav__overlay--is-visible {
+  display: block;
+}
+.site-nav__overlay-content {
+  position: relative;
+  /* top: 25%; */
+  width: 100%;
+  text-align: center;
+  /* margin-top: 30px; */
+}
+.site-nav__overlay a {
+  padding: 8px;
+  text-decoration: none;
+  color: black;
+  font-size: 36px;
+  display: block;
+  transition: 0.3s;
+}
+.site-nav__overlay a:hover, .site-nav .overlay a:focus {
+  color: #e84d74;
+}
+
+.logo {
+  height: 55px;
+  margin: 0.5rem auto;
+  display: block;
 }
 
 .carousel {
