--- a/static/css/scss/_colors.scss
+++ b/static/css/scss/_colors.scss
@@ -1,3 +1,8 @@
 $froly: #ee6e73;
 $jungle_green: #26a69a;
 $tagcolor: #ee6e73;
+
+$mainBlue: #e0f0fa;
+$mainOrange: #d59541;
+$mainPink: #e84d74;
+$mainGrey: #d8d9dd;
