--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -47,7 +47,6 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
   <script type=" text/javascript">
     $(document).ready(function () {
       $('.sidenav').sidenav();
@@ -62,7 +61,7 @@
       });
     });
   </script>
-  <!-- <script type="text/javascript" src="/static/js/stickyHeader.js></script> -->
+  <script type="text/javascript" src="/static/js/app.js"></script>
 
 </body>
 
