--- a/static/css/scss/_nav.scss
+++ b/static/css/scss/_nav.scss
@@ -1,42 +1,254 @@
 
-
+// Offset Materialize styling
 nav {
-
     box-shadow: none;
-    
-    .nav-wrapper {
-    
-        display: grid;
-        grid-template-columns: 33% 33% 33%;
-        align-items: center;
+    height: auto;
+    background-color: $mainBlue;
+}
 
-        .brand-logo-img {
-            height: 35px;
+.primary-nav {
+    padding-top: 1rem;
+    
+    ul {
+        list-style: none;
+        text-align: center;
+        padding: 0;   
+
+        li {
+            margin-bottom: 1em;
+            margin-left: 1em;
         }
-        
-        &__left {
-            grid-column: 1;
-            justify-self: start;
-            align-self: center;
-            left: 15%;
+
+        a {
+            text-decoration: none;
+            font-size: 1.2rem;
+            text-transform: uppercase;
         }
+    }
+}
+
+.site-nav {
+    top: 0;
+    border-top: 2px solid $mainPink;
+    border-bottom: 1px solid #e5e5e5;
+    position: fixed;
+    background-color: #fff;
+    width: 100%;
+    z-index: 2;
+    
+    &__menu-icon {
+        width: 20px;
+        height: 19px;
+        position: absolute;
+        top: 25px;
+        right: 20px;
+        z-index: 3;
+
+        &::before {
+            content: "";    
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 20px;
+            height: 3px;
+            background-color: $mainPink;
+            transform-origin: 0 0;
+            transition: transform .3s ease-out;
+        }
+
         &__middle {
-            grid-column: 2;
-            justify-self: center;
-            align-self: center;
+            position: absolute;
+            top: 8px;
+            left: 0;
+            width: 20px;
+            height: 3px;
+            background-color: $mainPink;
+            transition: opacity .3s ease-out;
         }
-        
-        &__right {
-            grid-column: 3;
-            justify-self: end;
-            align-self: center;
+
+        &::after {
+            content: "";  
+            position: absolute;
+            bottom: 0px;
+            left: 0;
+            width: 20px;
+            height: 3px;
+            background-color: $mainPink;
+            transform-origin: 0 100%;
+            transition: transform .3s ease-out;
+        }
+    }
+
+    &__menu-icon--close-x {
+        &::before {
+            transform: rotate(45deg) scaleX(1.25);
         }
     
+        .site-nav__menu-icon__middle {
+            opacity: 0;
+        }
+
+    
+        &::after {
+            transform: rotate(-45deg) scaleX(1.25) translateY(1px);
+        }
     }
+
+
+    &__overlay {
+        height: 100%;
+        width: 100%;
+        position: fixed;
+        z-index: 1;
+        top: 0;
+        left: 0;
+        background-color: $mainBlue;
+        overflow-y: hidden;
+        transition: 0.5s;
+        border-top: 2px solid $mainPink;
+        border-bottom: 10px solid $mainPink;
+        display: none;
+
+    &--is-visible {
+        display: block;
+    }
+        
+    }
+
+      &__overlay-content {
+        position: relative;
+        /* top: 25%; */
+        width: 100%;
+        text-align: center;
+        /* margin-top: 30px; */
+      }
+      
+      &__overlay a {
+        padding: 8px;
+        text-decoration: none;
+        color: black;
+        font-size: 36px;
+        display: block;
+        transition: 0.3s;
+      }
+      
+      &__overlay a:hover, .overlay a:focus {
+        color: $mainPink;
+      }
+
 
 }
 
-// .nav-grid {
-//     display: grid;
-//     grid-template-columns: 1fr 1fr;
+.logo {
+    height: 55px;
+    margin: 0.5rem auto;
+    display: block;
+    
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+// nav {
+//     background-color: white;
+//     box-shadow: none;
+    
+//     .nav-wrapper {
+//         border-top: 2px solid $mainPink;
+//         display: grid;
+//         grid-template-columns: 33% 33% 33%;
+//         align-items: center;
+
+//         .brand-logo-img {
+//             height: 55px;
+//         }
+        
+//         &__left {
+//             grid-column: 1;
+//             justify-self: start;
+//             align-self: center;
+//             left: 15%;
+//         }
+//         &__middle {
+//             grid-column: 2;
+//             justify-self: center;
+//             align-self: center;
+//         }
+        
+//         &__right {
+//             grid-column: 3;
+//             justify-self: end;
+//             align-self: center;
+//         }
+    
+//     }
+
 // }
+
+// .sidenav-trigger {
+//     width: 20px;
+//     height: 19px;
+//     position: absolute;
+//     top: 25px;
+//     left: 20px;
+//     z-index: 3;
+
+//     &::before {
+//         content: "";    
+//         position: absolute;
+//         top: 0;
+//         left: 0;
+//         width: 20px;
+//         height: 3px;
+//         background-color: $mainPink;
+//         transform-origin: 0 0;
+//         transition: transform .3s ease-out;
+//     }
+
+//     &__middle {
+//         position: absolute;
+//         top: 8px;
+//         left: 0;
+//         width: 20px;
+//         height: 3px;
+//         background-color: $mainPink;
+//         transition: opacity .3s ease-out;
+//     }
+
+//     &::after {
+//         content: "";  
+//         position: absolute;
+//         bottom: 0px;
+//         left: 0;
+//         width: 20px;
+//         height: 3px;
+//         background-color: $mainPink;
+//         transform-origin: 0 100%;
+//         transition: transform .3s ease-out;
+//     }
+// }
+
+
+// // .nav-grid {
+// //     display: grid;
+// //     grid-template-columns: 1fr 1fr;
+// // }
