--- a/templates/layouts/navigation.html
+++ b/templates/layouts/navigation.html
@@ -1,45 +1,35 @@
 {% block navigation %}
-<div class="navbar-fixed">
-    <nav>
-        <div class="nav-wrapper nav-grid">
-            <!-- <div class="nav-grid"> -->
-            <a href="#" class="brand-logo nav-wrapper__left"> <img class="brand-logo-img"
-                    src="/static/images/logo_white.png"> </a>
-            <h5 class="nav-wrapper__middle">{{title}}</h5>
-            <a href="#" data-target="mobile-demo" class="sidenav-trigger nav-wrapper__right"><i
-                    class="material-icons">menu</i></a>
-            <!-- </div> -->
-
-
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="{{url_for('home')}}">Home</a></li>
-                <li><a href="{{url_for('ideas')}}">Ideas</a></li>
-                <li><a href="{{url_for('contact')}}">Contact</a></li>
-                {% if 'username' in session %}
-                <li><a href="{{url_for('account')}}">{{session["username"]}}</a></li>
-                <li><a class="nav-link" href="{{url_for('logout')}}">Log Out</a></li>
-                {% endif %}
-                {% if not 'username' in session %}
-                <li><a href="{{url_for('register')}}">Register</a></li>
-                <li><a href="{{url_for('login')}}">Log in</a></li>
-                {% endif %}
-            </ul>
-
+<div class="site-nav">
+    <div class="site-nav__menu-icon">
+        <div class="site-nav__menu-icon__middle"></div>
+    </div>
+    <div class="site-nav__overlay">
+        <div class="site-nav__overlay-content">
+            <img class="logo" src="static/images/chingu-logo-cropped.png" alt="">
+            <nav class="primary-nav">
+                <ul>
+                    <li><a href="{{url_for('home')}}">Home</a></li>
+                    <li><a href="{{url_for('ideas')}}">Ideas</a></li>
+                    <li><a href="{{url_for('contact')}}">Contact</a></li>
+                    {% if 'username' in session %}
+                    <li><a href="{{url_for('account')}}">{{session["username"]}}</a></li>
+                    <li><a class="nav-link" href="{{url_for('logout')}}">Log Out</a></li>
+                    {% endif %}
+                    {% if not 'username' in session %}
+                    <li><a href="{{url_for('register')}}">Register</a></li>
+                    <li><a href="{{url_for('login')}}">Log in</a></li>
+                    {% endif %}
+                </ul>
+            </nav>
+            <div class="site-nav__overlay-subscribe">
+                <h3 class="section-title">
+                    Never miss out
+                </h3>
+                <p>
+                    Get news, new surveys and results delivered in your inbox!
+                </p>
+            </div>
         </div>
-    </nav>
+    </div>
+    <img class="logo" src="static/images/chingu-logo-cropped.png" alt="">
 </div>
-
-<ul class="sidenav" id="mobile-demo">
-    <li><a href="{{url_for('home')}}">Home</a></li>
-    <li><a href="{{url_for('ideas')}}">Ideas</a></li>
-    <li><a href="{{url_for('contact')}}">Contact</a></li>
-    {% if 'username' in session %}
-    <li><a href="{{url_for('account')}}">{{session["username"]}}</a></li>
-    <li><a class="nav-link" href="{{url_for('logout')}}">Log Out</a></li>
-    {% endif %}
-    {% if not 'username' in session %}
-    <li><a href="{{url_for('register')}}">Register</a></li>
-    <li><a href="{{url_for('login')}}">Log in</a></li>
-    {% endif %}
-</ul>
-{% endblock %}
