Finish mobile styling homnepage.

--- a/static/css/scss/styles.scss
+++ b/static/css/scss/styles.scss
@@ -1,4 +1,4 @@
-@use 'register';
+@import 'register';
 @import 'colors';
 @import 'base';
 @import 'idea_card';
@@ -8,4 +8,5 @@
 @import 'search_sort';
 @import 'nav';
 @import 'ideas';
+@import 'hero';
 
