--- a/static/css/override.css
+++ b/static/css/override.css
@@ -19,6 +19,19 @@ header {
   margin-bottom: 5rem;
 }
 
+.hero {
+  background-color: #e0f0fa;
+}
+.hero h1 {
+  padding-top: 2.5rem;
+  text-align: center;
+}
+.hero h2 {
+  text-align: center;
+  font-size: 28px;
+  line-height: 40px;
+}
+
 .wrapper {
   width: 800px;
   margin: 0 auto;
@@ -45,9 +58,8 @@ header {
     grid-template-columns: 1fr 1fr;
   }
 }
-.btn-centered {
-  display: block;
-  margin: 0 auto;
+.btn {
+  background-color: #e84d74;
 }
 
 .set-width__200px {
@@ -60,6 +72,11 @@ header {
 
 .margin-bottom {
   margin-bottom: 2rem;
+}
+
+.bold {
+  color: #e84d74;
+  font-weight: 700;
 }
 
 .card {
@@ -445,6 +462,54 @@ nav {
   display: block;
   margin: 0 auto;
   width: 100px;
+}
+
+.hero-home {
+  background-color: #e0f0fa;
+}
+.hero-home h1 {
+  padding: 2rem 1rem 2rem 1rem;
+  text-align: center;
+  font-weight: 500;
+}
+.hero-home h2 {
+  text-align: center;
+  font-size: 2rem;
+  line-height: 2.5rem;
+  padding: 0 1rem 3rem 1rem;
+}
+.hero-home__icon {
+  color: #e84d74;
+  display: block;
+  margin: 0 auto;
+}
+.hero-home__btn {
+  background-color: #e84d74;
+  color: white;
+  font-size: 16px;
+  font-weight: 400;
+  text-decoration: none;
+  margin: 2rem auto 2rem auto;
+  border: none;
+  border-radius: 4px;
+  display: block;
+  padding: 0.75rem 1.5rem;
+  max-width: 100px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+h5 {
+  text-align: center;
+  line-height: 2rem;
+  padding: 0 1rem 1rem 1rem;
+}
+
+.material-icons-hero {
+  color: #e84d74;
+  display: block;
+  margin: 2rem auto;
+  text-align: center;
 }
 
 /*# sourceMappingURL=override.css.map */
