--- a/static/css/scss/_base.scss
+++ b/static/css/scss/_base.scss
@@ -8,6 +8,21 @@ header {
     margin-bottom: 5rem;
 }
 
+.hero {
+    background-color: $mainBlue;
+
+    h1 {
+        padding-top: 2.5rem;
+        text-align: center;
+    }
+
+    h2 {
+        text-align: center;
+        font-size: 28px;
+        line-height: 40px;
+    }
+}
+
 .wrapper {
     width: 800px;
     margin: 0 auto;
@@ -42,9 +57,8 @@ header {
     }
 }
 
-.btn-centered {
-    display: block;
-    margin: 0 auto;
+.btn {
+    background-color: $mainPink;
 }
 
 .set-width__200px {
@@ -58,3 +72,8 @@ header {
 .margin-bottom {
     margin-bottom: 2rem;
 }
+
+.bold {
+    color: $mainPink;
+    font-weight: 700;
+  }
