--- a/static/css/scss/_hero.scss
+++ b/static/css/scss/_hero.scss
@@ -53,3 +53,24 @@ h5 {
     text-align: center;
     
 }
+
+.hero-ideas {
+    background-color: white;
+
+    &__cta-bar {
+        background-color: $mainBlue;
+        box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+        padding-bottom: 1rem;
+    
+        &--text {
+            text-align: center;  
+            padding: 1rem;    
+        }
+    
+        &--btn {
+            display: block;
+            margin: 0 auto;
+            width: 100px;
+        }
+    }
+}
