--- a/templates/pages/ideas/ideas.html
+++ b/templates/pages/ideas/ideas.html
@@ -1,10 +1,10 @@
 {% extends 'layouts/base.html' %}
 {% block hero %}
-<div class="hero">
+<div class="hero-ideas">
   {% include 'components/idea_carousel.html' %}
-  <div class="hero__cta-bar">
-    <h6 class="hero__cta-bar--text">Do you have an idea? Let the world know!</h6><a href="{{url_for('addidea')}}"
-      class="waves-effect waves-light btn hero__cta-bar--btn">add idea</a>
+  <div class="hero-ideas__cta-bar">
+    <h6 class="hero-ideas__cta-bar--text">Do you have an idea? Let the world know!</h6><a href="{{url_for('addidea')}}"
+      class="waves-effect waves-light btn hero-ideas__cta-bar--btn">add idea</a>
   </div>
 </div>
 {% endblock %}
